--- a/src/component/FollowProfile/ProfileList/styles.module.scss
+++ b/src/component/FollowProfile/ProfileList/styles.module.scss
@@ -1,5 +1,6 @@
-.Connectioncolumn {
-  flex: 1 1 calc(50% - 16px); // Ensure two columns
-  max-width: calc(50% - 16px); // Maintain two cards per row
+.profileListContainer {
+  flex: 1 1 calc(50% - 16px);
+  max-width: calc(50% - 16px);
   box-sizing: border-box;
+  display: contents;
 }
