--- a/src/component/Modal/EventsTab/EventImpact/styles.module.scss
+++ b/src/component/Modal/EventsTab/EventImpact/styles.module.scss
@@ -2,9 +2,9 @@
 @import '../../../../styles//fonts';
 @import '../../../../styles/mixin';
 
-.Eventimpact {
+.eventImpact {
   margin-top: 24px;
-  h5 {
+  .impactDetails {
     @include fontAlpha();
     display: flex;
     font-size: 14px;
@@ -12,7 +12,7 @@
     line-height: 21px;
     color: $gray-100;
   }
-  .Impact {
+  .impact {
     margin-top: 8px;
     width: 625px;
     height: 97px;
@@ -20,29 +20,13 @@
     border-radius: 8px;
     padding: 16px 12px;
     background: $Gradient-Grey-Black;
-    h5 {
-      @include fontAlpha();
+    .impactHaeding {
+      @include font-sm();
       display: flex;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 21px;
       color: $gray-100;
     }
-    .Scoreterm {
+    .scoreTerm {
       @include justify-space-between();
-      .Score {
-        margin-top: 8px;
-        span {
-          @include fontAlpha();
-          font-size: 14px;
-          font-weight: 400;
-          line-height: 21px;
-          margin-right: 135px;
-          position: relative;
-          top: 8px;
-          color: $gray-100;
-        }
-      }
     }
   }
 }
