--- a/src/component/MessagePopup/PermissionCheck/styles.module.scss
+++ b/src/component/MessagePopup/PermissionCheck/styles.module.scss
@@ -1,10 +1,10 @@
 @import '../../../styles/colors';
 @import '../../../styles/mixin';
 
-.Permissionitem {
+.permissionItem {
   @include space-between;
   margin-top: 25px;
-  .Text {
+  .text {
     flex: 1;
     font-size: 14px;
     line-height: 21px;
