--- a/src/component/Modal/EventsTab/Eventaccordian/styles.module.scss
+++ b/src/component/Modal/EventsTab/Eventaccordian/styles.module.scss
@@ -2,18 +2,16 @@
 @import '../../../../styles/fonts';
 @import '../../../../styles/mixin';
 
-.Eventaccordian {
+.eventAccordion {
   margin-top: 8px;
   width: 625px;
   border: 1px solid $Gradient-Grey-Black;
   border-radius: 8px;
   padding: 16px 12px;
   background: $Gradient-Grey-Black;
-  h5 {
-    @include fontAlpha();
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
+  .eventHeading {
+    @include font-sm();
     color: $gray-100;
+    text-align: left;
   }
 }
