--- a/src/component/Navbar/styles.module.scss
+++ b/src/component/Navbar/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors';
 @import '../../styles/mixin';
 
-.Navbar {
+.navbar {
   @include space-between;
   box-sizing: border-box;
   border-bottom: 2px solid $Gradient-bottom-Nav;
