--- a/src/component/shared/tooltip/styles.module.scss
+++ b/src/component/shared/tooltip/styles.module.scss
@@ -3,15 +3,15 @@
 @import '../../../styles/mixin';
 /* styles/Tooltip.module.scss */
 
-.Tool {
-  .Infoicon {
+.tool {
+  .infoIcon {
     margin-top: 2px;
     gap: 12px;
     position: relative;
     display: inline-block;
     cursor: pointer;
   }
-  .Tooltip {
+  .tooltip {
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -43,7 +43,7 @@
       border-color: transparent transparent $gray-800 transparent;
     }
   }
-  .Infoicon:hover .Tooltip {
+  .infoIcon:hover .tooltip {
     visibility: visible;
     opacity: 1;
   }
